<resources>
    <string name="app_name">NeonatalMonitoring</string>
    <string name="app">Baba - Monitoring System</string>
    <string name="email">E-mail Address</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgotten Password?</string>
    <string name="login">Login</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="create_one">Create One</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Phone_no">Phone Number</string>
    <string name="pass_again">Password Again</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="return_login">Return to Login</string>
    <string name="send_email">Send E-mail</string>
    <string name="username">Username</string>
    <string name="appwidget_text">Baba</string>
    <string name="add_widget">Add widget</string>
    <string name="back_to_dash">Back to Dashboard</string>
    <string name="register_account">Register Account</string>

    <string name="add_device">Add Device</string>
    <string name="manage_devices">Manage Device</string>
    <string name="manage_users">Manage Users</string>
    <string name="register">Register</string>
    <string name="title_activity_nav__drawer">Nav_Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_drawer">MainDrawer</string>
</resources>
