<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context="neo.baba.neonatalmonitoring.Login">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/layout_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="50dp"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingLeft="20dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baby_head" />

        <EditText
            android:id="@+id/password"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:layout_marginEnd="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:contentDescription="Password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textAlignment="textStart"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <ImageView
            android:id="@+id/baby_head"
            android:layout_width="96dp"
            android:layout_height="91dp"
            android:layout_marginEnd="158dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sleeping_baby" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:background="#89cff0"
            android:onClick="login"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_pass" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="230dp"
            android:layout_height="30dp"
            android:layout_marginEnd="60dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="5dp"
            android:background="#c68dff"
            android:onClick="createAccount"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="157dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:onClick="forgotten"
            android:text="@string/forgot_pass"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginEnd="147dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/dont_have"
            android:textColor="#000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
